
* Shorter buffer names for convenience.
 
* Removed transparent gif (text logo) from splash screen 
  because XEmacs can't display it nicely.
 
* Documentation updates.


Coq Changes
-----------

* Set proof-{qed,save}-commands so the toolbar functions work.

* Generic command C-c C-f (proof-find-theorems) replaces Coq
  specific command C-c C-s (coq-Search).


Isabelle and Isar Changes
-------------------------

* Several tweaks for input syntax.  

* Recognize goals of the old form val prems = goal ...
  and saves of the old form val thm = result.

* Proofs which are "unfinished", i.e. have no qed or result,
  are now closed off automatically when a new goal is begun,
  mirroring the behaviour of Isabelle.


Only in the developers' release
-------------------------------

* Provisional instantiation of Proof General for
  Plastic (http://www.dur.ac.uk/CARG/plastic.html)
  by Paul Callaghan <P.C.Callaghan@durham.ac.uk>.


Internal changes for developers to note
---------------------------------------

* Many robustness improvements so that Proof General fails
  gracefully when certain configuration settings are unset.
  The aim is to make it easier to adapt to new proof
  assistants.

* proof-shell-leave-annotations-in-output variable has been added.
  This allows quick and dirty mark up of output from the proof
  assistant using special characters with codes above 128 and
  font-lock.  Such characters are hidden from display in the
  output buffers.  
  However, it is NOT recommended to use this mechanism, because
  it breaks the usability of cut and paste (which copies the
  special characters).  Furthermore the entire mechanism of
  using special character codes is fragile and needs replacing
  in future versions of Proof General!

* Renamed some configuration variables for uniformity:
    proof-ctxt-string -> proof-context-command
    proof-help-string -> proof-info-command
    proof-prf-string  -> proof-showproof-command

* Code cleanups and improvements.
